# speexdsp

./: .gitignore  CMakeLists.txt  build_android.bat
include/speex/: speexdsp_types.h
